[gd_scene load_steps=15 format=2]

[ext_resource path="res://topdown_shooter/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://topdown_shooter/arena.gd" type="Script" id=2]
[ext_resource path="res://topdown_shooter/enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/unifont-15.0.01.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://topdown_shooter/score.gd" type="Script" id=5]
[ext_resource path="res://topdown_shooter/camera_2d.gd" type="Script" id=6]
[ext_resource path="res://topdown_shooter/high_score.gd" type="Script" id=7]
[ext_resource path="res://topdown_shooter/enemy2.tscn" type="PackedScene" id=8]
[ext_resource path="res://topdown_shooter/power_up_reload.tscn" type="PackedScene" id=9]
[ext_resource path="res://topdown_shooter/power_up_damage.tscn" type="PackedScene" id=10]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_bloom = 0.15
glow_blend_mode = 0
glow_bicubic_upscale = true

[sub_resource type="DynamicFont" id=2]
size = 128
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 4 )

[node name="Arena" type="Node2D"]
script = ExtResource( 2 )
enemies = [ ExtResource( 3 ), ExtResource( 8 ) ]
power_ups = [ ExtResource( 9 ), ExtResource( 10 ) ]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 384 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Enemy" parent="." instance=ExtResource( 3 )]

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="DifficultyTimer" type="Timer" parent="."]
autostart = true

[node name="PowerUpSpawnTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="UI" type="Node2D" parent="."]
z_index = 20

[node name="Control" type="Control" parent="UI"]
margin_right = 1024.0
margin_bottom = 768.0
theme = SubResource( 3 )

[node name="Score" type="Label" parent="UI/Control"]
anchor_right = 1.0
margin_bottom = 128.0
text = "100"
align = 1
valign = 1
script = ExtResource( 5 )

[node name="HighScore" type="Label" parent="UI/Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -80.0
custom_fonts/font = SubResource( 4 )
text = "High Score: 9990"
align = 1
valign = 1
script = ExtResource( 7 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 512, 384 )
current = true
script = ExtResource( 6 )

[node name="ScreenShakeTimer" type="Timer" parent="Camera2D"]
one_shot = true

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_DifficultyTimer_timeout"]
[connection signal="timeout" from="PowerUpSpawnTimer" to="." method="_on_PowerUpSpawnTimer_timeout"]
[connection signal="timeout" from="Camera2D/ScreenShakeTimer" to="Camera2D" method="_on_ScreenShakeTimer_timeout"]
